--- a/Creat3D/Contenu/style.css
+++ b/Creat3D/Contenu/style.css
@@ -4,7 +4,7 @@
 */
 
 .row [class^="col-"] {
-/*    border: 1px solid #ddd;
+/*   border: 1px solid #ddd;
     border: 1px solid rgba(128,128,128,.4);
     border-radius: 5px;*/
 }
@@ -13,7 +13,7 @@ footer {
   color: white;
 }
 .list-group-item{
-    background-color: #FFE4C4;
+    background-color: rgb(51,204,204);
 }
 
 .img-jeu{
@@ -22,6 +22,11 @@ footer {
 
 .img-panier{
     max-height: 70px;
+}
+
+.navbar-default {
+    background-color: #800080;
+    border-color: #800080;
 }
 
 .col-vert-centered-2{
