--- a/Creat3D/Contenu/style.css
+++ b/Creat3D/Contenu/style.css
@@ -8,6 +8,9 @@
     border: 1px solid rgba(128,128,128,.4);
     border-radius: 5px;*/
 }
+body{
+    font-family: FromWhereYouAre;
+}
 footer {
   background: black;
   color: white;
@@ -38,7 +41,11 @@ a.list-group-item {
 .col-vert-centered-2{
     margin: 12% 0;
 }
-
+@font-face {
+    font-family: "FromWhereYouAre";
+    src: url('./Contenu/Font-style/FromWhereYouAre.ttf');
+} 
+/*
 .btn{
     background-color: rgb(51,204,204);
-}
+}*/
